framec/tests/snapshots/lua_snapshots__async_attribute.snap
---
source: framec/tests/lua_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"lua\")"
---
local Cache = {}
function Cache:get(k) return "v:" .. k end

local AsyncFetcherFrameEvent = {}
AsyncFetcherFrameEvent.__index = AsyncFetcherFrameEvent

function AsyncFetcherFrameEvent.new(message, parameters)
    local self = setmetatable({}, AsyncFetcherFrameEvent)
    self._message = message
    self._parameters = parameters or {}
    return self
end


local AsyncFetcherFrameContext = {}
AsyncFetcherFrameContext.__index = AsyncFetcherFrameContext

function AsyncFetcherFrameContext.new(event, default_return)
    local self = setmetatable({}, AsyncFetcherFrameContext)
    self._event = event
    self._return = default_return
    self._data = {}
    self._transitioned = false
    return self
end


local AsyncFetcherCompartment = {}
AsyncFetcherCompartment.__index = AsyncFetcherCompartment

function AsyncFetcherCompartment.new(state, parent_compartment)
    local self = setmetatable({}, AsyncFetcherCompartment)
    self.state = state
    self.state_args = {}
    self.state_vars = {}
    self.enter_args = {}
    self.exit_args = {}
    self.forward_event = nil
    self.parent_compartment = parent_compartment
    return self
end

function AsyncFetcherCompartment:copy()
    local c = AsyncFetcherCompartment.new(self.state, self.parent_compartment)
    c.state_args = {}
    for k, v in pairs(self.state_args) do c.state_args[k] = v end
    c.state_vars = {}
    for k, v in pairs(self.state_vars) do c.state_vars[k] = v end
    c.enter_args = {}
    for k, v in pairs(self.enter_args) do c.enter_args[k] = v end
    c.exit_args = {}
    for k, v in pairs(self.exit_args) do c.exit_args[k] = v end
    c.forward_event = self.forward_event
    return c
end


local AsyncFetcher = {}
AsyncFetcher.__index = AsyncFetcher

function AsyncFetcher.new()
    local self = setmetatable({}, AsyncFetcher)
    self._state_stack = {}
    self._context_stack = {}
    self.cache = nil
    self.__compartment = self:__prepareEnter("Ready", nil, nil)
    self.__next_compartment = nil
    return self
end

function AsyncFetcher:_frame_init()
end

function AsyncFetcher._create()
    local c = AsyncFetcher.new()
    c:_frame_init()
    return c
end

function AsyncFetcher:hsm_chain()
    local t = {}
    t["Ready"] = {"Ready"}
    return t
end
function AsyncFetcher:__prepareEnter(leaf, state_args, enter_args)
    state_args = state_args or {}
    enter_args = enter_args or {}
    local comp = nil
    local chain = self:hsm_chain()[leaf]
    for i = 1, #chain do
        local new_comp = AsyncFetcherCompartment.new(chain[i])
        new_comp.state_args = {}
        for j = 1, #state_args do new_comp.state_args[j] = state_args[j] end
        new_comp.enter_args = {}
        for j = 1, #enter_args do new_comp.enter_args[j] = enter_args[j] end
        new_comp.parent_compartment = comp
        comp = new_comp
    end
    return comp
end

function AsyncFetcher:__prepareExit(exit_args)
    local comp = self.__compartment
    while comp ~= nil do
        comp.exit_args = {}
        for j = 1, #exit_args do comp.exit_args[j] = exit_args[j] end
        comp = comp.parent_compartment
    end
end

function AsyncFetcher:__kernel(__e)
    -- Route event to current state.
    self:__router(__e)
    -- Drain any transitions queued by the handler.
    while self.__next_compartment ~= nil do
        local next_compartment = self.__next_compartment
        self.__next_compartment = nil
        local exit_event = AsyncFetcherFrameEvent.new("<$", self.__compartment.exit_args)
        self:__router(exit_event)
        self.__compartment = next_compartment
        local forward_event = next_compartment.forward_event
        next_compartment.forward_event = nil
        if forward_event == nil then
            local enter_event = AsyncFetcherFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
        elseif forward_event._message == "$>" then
            self:__router(forward_event)
        else
            local enter_event = AsyncFetcherFrameEvent.new("$>", self.__compartment.enter_args)
            self:__router(enter_event)
            self:__router(forward_event)
        end
        for _, ctx in ipairs(self._context_stack) do
            ctx._transitioned = true
        end
    end
end

function AsyncFetcher:__router(__e)
    local handler = self["_state_" .. self.__compartment.state]
    if handler then
        handler(self, __e, self.__compartment)
    end
end

function AsyncFetcher:__transition(next_compartment)
    self.__next_compartment = next_compartment
end

function AsyncFetcher:fetch(key)
    local __e = AsyncFetcherFrameEvent.new("fetch", {key})
    local __ctx = AsyncFetcherFrameContext.new(__e, nil)
    self._context_stack[#self._context_stack + 1] = __ctx
    local __ok, __err = pcall(self.__kernel, self, __e)
    if not __ok then
        self._context_stack[#self._context_stack] = nil
        error(__err)
    end
    return table.remove(self._context_stack)._return
end

function AsyncFetcher:_state_Ready(__e, compartment)
    if __e._message == "fetch" then
        self:_s_Ready_hdl_user_fetch(__e, compartment)
        return
    end
end

function AsyncFetcher:_s_Ready_hdl_user_fetch(__e, compartment)
    local key = __e._parameters[1]
    self._context_stack[#self._context_stack]._return = self.cache.get(key)
end

function AsyncFetcher:init()
    -- async init not yet implemented for Lua
end

return {
    AsyncFetcher = AsyncFetcher,
}
